--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.4",
+    "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
+    "jest": "^25.2.7",
+    "ts-jest": "^25.3.1",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3"
   },
@@ -23,6 +26,7 @@
     "react-reconciler": "^0.25.1"
   },
   "scripts": {
+    "test": "jest",
     "build": "tsc",
     "prestart": "yarn build",
     "start": "node dist/example/server.js"
