--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phelia",
-  "version": "0.0.0-alpha.4",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
