--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@types/jest": "^25.2.1",
     "@types/node": "12.7.0",
     "@types/react": "^16.9.32",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jsdoc": "^23.0.0",
     "jest": "^25.2.7",
     "rimraf": "^3.0.2",
     "ts-jest": "^25.3.1",
@@ -29,10 +33,11 @@
   },
   "scripts": {
     "test": "jest",
+    "lint": "eslint src --ext ts --ext tsx",
     "build": "tsc",
     "clean": "yarn rimraf dist",
     "prestart": "yarn build",
-    "prepublish": "yarn test && yarn clean && yarn build --project prod.tsconfig.json",
+    "prepublish": "yarn lint && yarn test && yarn clean && yarn build --project prod.tsconfig.json",
     "start": "node dist/example/server.js"
   }
 }
