--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "phelia",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "main": "dist/index.js",
   "license": "MIT",
+  "url": "https://github.com/maxchehab/phelia",
   "devDependencies": {
     "@types/express": "^4.17.4",
     "@types/jest": "^25.2.1",
