--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express": "^4.17.4",
     "@types/jest": "^25.2.1",
     "@types/node": "12.7.0",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.32",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
@@ -27,6 +28,7 @@
     "@types/react-reconciler": "^0.18.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-reconciler": "^0.25.1",
