support multiple tokens

--- a/prod.tsconfig.json
+++ b/prod.tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "declaration": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules/**/*", "src/example/**/*", "src/tests/**/*"]
