--- a/.eslintrc
+++ b/.eslintrc
@@ -11,22 +11,11 @@
     "jsdoc/no-types": 1,
     "jsdoc/require-param-description": 1,
     "jsdoc/require-returns-description": 1,
-    "jsdoc/require-hyphen-before-param-description": [1, "always"],
-    "jsdoc/require-jsdoc": [
-      2,
-      {
-        "contexts": ["TSPropertySignature"],
-        "require": {
-          "ArrowFunctionExpression": true,
-          "FunctionDeclaration": true,
-          "ClassDeclaration": true
-        }
-      }
-    ]
+    "jsdoc/require-hyphen-before-param-description": [1, "always"]
   },
   "overrides": [
     {
-      "files": ["*.spec.*", "**/@types/**","**/example/**"],
+      "files": ["*.spec.*", "**/@types/**", "**/example/**"],
       "rules": {
         "jsdoc/require-jsdoc": 0
       }
